<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018, Nordic Semiconductor
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
  ~
  ~ 1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
  ~
  ~ 2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the
  ~ documentation and/or other materials provided with the distribution.
  ~
  ~ 3. Neither the name of the copyright holder nor the names of its contributors may be used to endorse or promote products derived from this
  ~ software without specific prior written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
  ~ LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
  ~ HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
  ~ LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
  ~ ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
  ~ USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/layout">

	<data>

		<variable
			name="viewmodel"
			type="ch.kentai.android.soundingsoil.viewmodels.BlinkyViewModel" />
	</data>


	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="#000000"
		tools:context="ch.kentai.android.soundingsoil.BlinkyActivity">


		<com.google.android.material.appbar.AppBarLayout
			android:id="@+id/appbar_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="#000000"
			android:theme="@style/AppTheme.AppBarOverlay"
			app:layout_constraintTop_toTopOf="parent">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="horizontal">

				<androidx.appcompat.widget.Toolbar
					android:id="@+id/toolbar"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:background="#000000"
					app:popupTheme="@style/AppTheme.PopupOverlay" />

			</LinearLayout>

		</com.google.android.material.appbar.AppBarLayout>

		<LinearLayout
			android:id="@+id/device_container"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_below="@+id/appbar_layout"
			android:orientation="vertical"
			android:visibility="gone"
			app:layout_constraintTop_toBottomOf="parent"
			tools:visibility="visible">


			<LinearLayout
				android:id="@+id/rec_settings"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:baselineAligned="false">

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:orientation="vertical">

					<TextView
						android:id="@+id/duration_title"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/duration_title"
						android:textColor="#FFFFFF" />

					<EditText
						android:id="@+id/duration_text"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:inputType="number"
						android:text="@{viewmodel.duration}"
						android:textColor="#FFFFFF" />
				</LinearLayout>

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:orientation="vertical">

					<TextView
						android:id="@+id/period_title"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/period_title"
						android:textColor="#FFFFFF" />

					<EditText
						android:id="@+id/period_text"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:inputType="number"
						android:text="@{viewmodel.period}"
						android:textColor="#FFFFFF" />
				</LinearLayout>

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:orientation="vertical">

					<TextView
						android:id="@+id/occurence_title"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/occurence_title"
						android:textColor="#FFFFFF" />

					<EditText
						android:id="@+id/occurence_text"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:inputType="number"
						android:text="@{viewmodel.occurence}"
						android:textColor="#FFFFFF" />
				</LinearLayout>

			</LinearLayout>

			<LinearLayout
				android:id="@+id/comm_log"
				android:layout_width="match_parent"
				android:layout_height="110dp"
				android:baselineAligned="false"
				android:orientation="horizontal">

				<ScrollView
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="3">

					<TextView
						android:id="@+id/data_sent_received"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:text=""
						android:textColor="#FFFFFF" />
				</ScrollView>

				<LinearLayout
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:orientation="vertical">

                    <Button
                        android:id="@+id/status_req_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rectangle"
                        android:backgroundTintMode="add"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:text="@string/status_request"
                        android:textSize="12sp" />

					<Button
						android:id="@+id/clear_mon_button"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:background="#4527A0"
						android:insetTop="0dp"
						android:insetBottom="0dp"
						android:text="@string/clear"
						android:textSize="12sp" />
				</LinearLayout>

			</LinearLayout>

			<LinearLayout
				android:id="@+id/record_part"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="#000000"
				android:gravity="center"
				android:orientation="vertical">


				<TextView
					android:id="@+id/rec_state"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:background="#00FFFFFF"
					android:paddingTop="30dp"
					android:text="@string/rec_state_unknown"
					android:textAlignment="center"
					android:textColor="#FFFFFF"
					android:textSize="18sp" />

				<ImageButton
					android:id="@+id/rec_button"
					android:layout_width="200dp"
					android:layout_height="200dp"
					android:adjustViewBounds="true"
					android:background="#00FFFFFF"
					android:contentDescription="@null"
					android:padding="20dp"
					android:scaleType="fitCenter"
					android:src="@drawable/record"
					android:tint="#FA4520" />

				<LinearLayout
					android:id="@+id/rec_number_part"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:padding="2dp">

					<TextView
						android:id="@+id/rec_number_label"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:text="@string/rec_number_label"
						android:textColor="#FFFFFF" />

					<TextView
						android:id="@+id/rec_number"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="0dp"
						android:textAlignment="center"
						android:textColor="#FFFFFF"
						android:textSize="14sp" />
				</LinearLayout>


				<TextView
					android:id="@+id/rec_time"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="2dp"
					android:textAlignment="center"
					android:textColor="#FFFFFF"
					android:textSize="14sp" />

				<LinearLayout
					android:id="@+id/file_path_part"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:padding="2dp">

					<TextView
						android:id="@+id/file_path_label"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:text="@string/file_path_label"
						android:textColor="#FFFFFF" />

					<TextView
						android:id="@+id/file_path"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="0dp"
						android:text="@{viewmodel.filepath}"
						android:textAlignment="center"
						android:textColor="#FFFFFF"
						android:textSize="14sp" />
				</LinearLayout>

			</LinearLayout>


			<com.newventuresoftware.waveform.WaveformView
				android:id="@+id/waveformView"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:background="#000000"
				android:paddingTop="4dp"
				android:paddingBottom="4dp"
				app:mode="RECORDING" />


			<LinearLayout
				android:id="@+id/monitor_part"
				android:layout_width="match_parent"
				android:layout_height="80dp"
				android:baselineAligned="false"
				android:gravity="bottom|center_vertical"
				android:orientation="horizontal">

				<LinearLayout
					android:id="@+id/mon_button_part"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:orientation="vertical">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="center_horizontal"
						android:orientation="horizontal">

						<TextView
							android:id="@+id/mon_state"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_margin="2dp"
							android:layout_weight="1"
							android:maxLines="1"
							android:paddingLeft="4dp"
							android:paddingRight="4dp"
							android:text="@string/monitor"
							android:textAlignment="viewStart"
							android:textColor="#FFFFFF"
							android:textSize="14sp" />

						<ImageView
							android:id="@+id/mon_state_led"
							android:layout_width="22dp"
							android:layout_height="22dp"
							android:layout_marginTop="1dp"
							android:padding="6dp"
							android:tint="#00FF00"
							app:srcCompat="@drawable/record" />
					</LinearLayout>

					<Button
						android:id="@+id/mon_button"
						style="@android:style/Widget.Button"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_margin="2dp"
						android:backgroundTint="#FFFFFF"
						android:contentDescription="@null"
						android:fontFamily="sans-serif"
						android:insetTop="0dp"
						android:insetBottom="0dp"
						android:letterSpacing="0.05"
						android:maxLines="1"
						android:paddingLeft="0dp"
						android:paddingRight="0dp"
						android:text="@string/mon_state_off"
						android:textColor="#000000"
						app:cornerRadius="0dp"
						app:strokeColor="@color/white"
						app:strokeWidth="1dp" />


				</LinearLayout>

				<LinearLayout
					android:id="@+id/conn_button_part"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:orientation="vertical">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="horizontal">

						<TextView
							android:id="@+id/connex_state_label"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_margin="2dp"
							android:layout_marginTop="2dp"
							android:layout_marginBottom="2dp"
							android:maxLines="1"
							android:paddingLeft="2dp"
							android:paddingRight="2dp"
							android:text="@string/bt"
							android:textAlignment="viewStart"
							android:textColor="#FFFFFF"
							android:textSize="14sp" />

						<TextView
							android:id="@+id/connex_state"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_marginTop="2dp"
							android:layout_marginBottom="2dp"
							android:layout_weight="1"
							android:maxLines="1"
							android:paddingLeft="2dp"
							android:paddingRight="2dp"
							android:textAlignment="viewStart"
							android:textColor="#FFFFFF"
							android:textSize="14sp" />

						<ImageView
							android:id="@+id/connex_state_led"
							android:layout_width="22dp"
							android:layout_height="22dp"
							android:layout_marginTop="1dp"
							android:padding="6dp"
							android:tint="#00FF00"
							app:srcCompat="@drawable/record" />
					</LinearLayout>

					<Button
                        android:id="@+id/conn_button"
                        style="@android:style/Widget.Button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:backgroundTint="#FFFFFF"
                        android:fontFamily="sans-serif"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:letterSpacing="0.05"
                        android:maxLines="1"
                        android:paddingLeft="0dp"
                        android:paddingRight="0dp"
                        android:text="@string/connect_audio"
                        android:textColor="#000000"
                        app:cornerRadius="0dp"
                        app:strokeColor="@color/white"
                        app:strokeWidth="1dp" />
				</LinearLayout>

                <LinearLayout
                    android:id="@+id/vol_control_part"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/vol_level_display"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">


                        <ProgressBar
                            android:id="@+id/volumeBar"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_margin="2dp"
                            android:layout_weight="1"
                            android:progressTint="#FFFFFF" />

                        <TextView
                            android:id="@+id/vol_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:gravity="center"
                            android:paddingLeft="2dp"
                            android:paddingRight="2dp"
                            android:text="@{viewmodel.volume}"
                            android:textAlignment="center"
                            android:textColor="#FFFFFF" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/vol_up_down"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

						<ImageButton
							android:id="@+id/vol_down_button"
							android:layout_width="0dp"
							android:layout_height="match_parent"
							android:layout_margin="2dp"
							android:layout_weight="1"
							android:adjustViewBounds="false"
							android:background="#FFFFFF"
							android:backgroundTint="#FFFFFF"
							android:contentDescription="@null"
							android:cropToPadding="true"
							android:scaleType="fitCenter"
							app:srcCompat="@drawable/icons8_low_volume_filled_50" />

						<ImageButton
							android:id="@+id/vol_up_button"
							android:layout_width="0dp"
							android:layout_height="match_parent"
							android:layout_margin="2dp"
							android:layout_weight="1"
							android:adjustViewBounds="false"
							android:background="#FFFFFF"
							android:backgroundTint="#FFFFFF"
							android:contentDescription="@null"
							android:cropToPadding="true"
							android:scaleType="fitCenter"
							app:srcCompat="@drawable/icons8_speaker_filled_50" />
                    </LinearLayout>

                </LinearLayout>

			</LinearLayout>


		</LinearLayout>

		<LinearLayout
			android:id="@+id/progress_container"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:layout_marginTop="32dp"
			android:gravity="center_horizontal"
			android:orientation="vertical"
			android:padding="@dimen/activity_horizontal_margin"
			android:visibility="invisible"
			app:layout_constraintHeight_percent="50"
			app:layout_constraintTop_toTopOf="parent"
			tools:visibility="visible">

			<TextView
				android:id="@+id/connection_state"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"
				android:textSize="16sp"
				android:visibility="invisible"
				tools:text="@string/state_connecting" />

			<ProgressBar
				android:id="@+id/progress_bar"
				style="@style/Widget.AppCompat.ProgressBar.Horizontal"
				android:layout_width="250dp"
				android:layout_height="wrap_content"
				android:indeterminate="true"
				android:visibility="invisible" />
		</LinearLayout>

		<include
			android:id="@+id/not_supported"
			layout="@layout/info_not_supported"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="4dp"
			android:layout_marginTop="4dp"
			android:layout_marginEnd="4dp"
			android:layout_marginBottom="4dp"
			android:visibility="invisible"
			tools:visibility="visible" />

	</RelativeLayout>

</layout>